[package]
name = "serde-json-helpers"
version = "0.1.2"
authors = ["Michael Holmes <706183+holmesmr@users.noreply.github.com>"]
edition = "2018"
description = "A collection of procedural macros compatible with stable Rust 2018 that simplify some common operations not covered by `serde_derive`."
license = "MIT OR Apache-2.0+"
repository = "https://github.com/holmesmr/serde-json-helpers"

[lib]
path = "src/lib.rs"
proc-macro = true

[dependencies]
quote = "0.6"
proc-macro2 = { version = "0.4", features = ["nightly"] }
syn = { version = "0.15", features = ["full", "extra-traits"] }
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
serde_json = "1"

[badges]
circle-ci = { repository = "holmesmr/serde-json-helpers" }